# folderizer

./: README.md  pyproject.toml
.github/workflows/: ruff.yml
folderizer/: __init__.py
tests/: test_folderizer.py
