[project]
name = "folderizer"
version = "0.1.1"
description = "A Python script for file organization"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Roy J. Wignarajah"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/rjwignar/folderizer"
Changelog = "https://github.com/rjwignar/folderizer/releases"
Issues = "https://github.com/rjwignar/folderizer/issues"
CI = "https://github.com/rjwignar/folderizer/actions"


[project.optional-dependencies]
test = ["pytest"]
dev = [
  "ruff",
  "mypy"
]